# RL_rubiks_visualizer

./: .gitattributes  .gitignore  README.md  __init__.py  accuracy_test.py  client.py  cloud_config.py  config.py  experiment_results.txt  experiment_results_v2.txt  local_client.py  local_server.py  model_config.py  pyproject.toml  quarternion_projection.py  quaternion_projection.py  rubiks_visualizer.py  run.bat  run.sh  run_dataset_generation.py  run_training.py  run_visualizer.py  run_visualizer_with_mcts_solver.py  server.py  setup.cfg  setup.sh
Demo/: rubiks_demo.mkv
Environment/: CubeConfig.py  __init__.py  cube.py
MCTS/: __init__.py  mcts.py
Models/: __init__.py  nnet.py
Notebooks/: plot_loss_curves.ipynb
Scripts/: __init__.py  dataset_generation.py  run_experiments.py
Visualizer/: __init__.py  quaternion_projection.py  rubiks_visualizer.py
trained_models/3x3/maxback10/: best_model_epoch_109.pt  best_model_epoch_97.pt
utils/: __init__.py  data_utils.py  nnet_utils.py  visualizer_utils.py
