[tool.poetry]
name = "rl rubicks cube"
version = "0.1.0"
description = ""
authors = ["shreyan241 <shreyansood@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
matplotlib = "^3.9.2"
flake8 = "^7.1.1"
tqdm = "^4.66.5"
flask = "^3.0.3"
poetry = "^1.8.3"
torch = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
